--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "dj-rest-auth>=7.0.1",
     "django~=4.2.0",
+    "django-allauth>=65.11.1",
     "django-cors-headers>=4.7.0",
     "djangorestframework>=3.16.1",
+    "requests>=2.32.5",
 ]
